# deepbook-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
examples/: account_open_orders.rs  balance.rs  check_manager_balance.rs  create_and_share_balance_manager.rs  deposit_into_manager.rs  mint_and_transfer_trade_cap.rs  place_limit_order.rs  utils.rs
src/: client.rs  lib.rs
src/transactions/: balance_manager.rs  deepbook.rs  deepbook_admin.rs  flash_loan.rs  governance.rs  mod.rs
src/utils/: config.rs  constants.rs  mod.rs  transactions.rs
