[package]
name = "deepbook-rust-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Deepbook"
license = "MIT"
repository = "https://github.com/styu12/deepbook-rust-sdk"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }